{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 775,
  "lineage": "ee39439a-8239-526e-a7b9-5f28d250e84c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:120545966579:loadbalancer/app/seafood-app/446f0f2e148aef56",
            "arn_suffix": "app/seafood-app/446f0f2e148aef56",
            "desync_mitigation_mode": "defensive",
            "dns_name": "seafood-app-577206743.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:120545966579:loadbalancer/app/seafood-app/446f0f2e148aef56",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "seafood-app",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04babc8f467c63c56"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0097c131c41b17cb1"
              },
              {
                "subnet_id": "subnet-09c74e967fc183c3b"
              }
            ],
            "subnets": [
              "subnet-0097c131c41b17cb1",
              "subnet-09c74e967fc183c3b"
            ],
            "tags": {
              "Environment": "seafood-app",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "seafood-app",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c2d228d5b410dd84",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:120545966579:listener/app/seafood-app/446f0f2e148aef56/1342ae069bfc77b4",
            "certificate_arn": "arn:aws:acm:us-east-1:120545966579:certificate/d9309188-2d00-46b5-80d4-843ad4d64924",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:120545966579:targetgroup/seafood-app/fb956cbc18f9a255",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:120545966579:listener/app/seafood-app/446f0f2e148aef56/1342ae069bfc77b4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:120545966579:loadbalancer/app/seafood-app/446f0f2e148aef56",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.api",
            "aws_lb_target_group.api",
            "aws_security_group.alb_security_group",
            "data.aws_acm_certificate.cert",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:120545966579:targetgroup/seafood-app/fb956cbc18f9a255",
            "arn_suffix": "targetgroup/seafood-app/fb956cbc18f9a255",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3001",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:120545966579:targetgroup/seafood-app/fb956cbc18f9a255",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "seafood-app",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c2d228d5b410dd84"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120545966579:security-group/sg-04babc8f467c63c56",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04babc8f467c63c56",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "seafood-app",
            "name_prefix": "",
            "owner_id": "120545966579",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "seafood-app",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "seafood-app",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2d228d5b410dd84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120545966579:security-group/sg-0fcdce6e0127a4738",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fcdce6e0127a4738",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-04babc8f467c63c56"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "seafood-app-api",
            "name_prefix": "",
            "owner_id": "120545966579",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "seafood-app",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "seafood-app",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2d228d5b410dd84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf05cef82d97e911",
            "association_id": "eipassoc-0c92b55a1e8e31e2e",
            "domain": "vpc",
            "id": "eipalloc-0bf05cef82d97e911",
            "network_border_group": "us-east-1",
            "network_interface": "eni-014efd367e3e072c1",
            "private_dns": "ip-10-0-101-182.ec2.internal",
            "private_ip": "10.0.101.182",
            "public_dns": "ec2-52-207-192-87.compute-1.amazonaws.com",
            "public_ip": "52.207.192.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "seafood-app",
              "Name": "seafood-app-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "seafood-app",
              "Name": "seafood-app-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120545966579:internet-gateway/igw-0f0ce8bd69ceb355a",
            "id": "igw-0f0ce8bd69ceb355a",
            "owner_id": "120545966579",
            "tags": {
              "Environment": "seafood-app",
              "Name": "seafood-app",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "seafood-app",
              "Name": "seafood-app",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c2d228d5b410dd84"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf05cef82d97e911",
            "connectivity_type": "public",
            "id": "nat-0bee6bdc252d8d9ac",
            "network_interface_id": "eni-014efd367e3e072c1",
            "private_ip": "10.0.101.182",
            "public_ip": "52.207.192.87",
            "subnet_id": "subnet-0097c131c41b17cb1",
            "tags": {
              "Environment": "seafood-app",
              "Name": "seafood-app-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "seafood-app",
              "Name": "seafood-app-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-038069f107af0660d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bee6bdc252d8d9ac",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-038069f107af0660d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f0ce8bd69ceb355a",
            "id": "r-rtb-0bc526276296914b51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bc526276296914b5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120545966579:route-table/rtb-038069f107af0660d",
            "id": "rtb-038069f107af0660d",
            "owner_id": "120545966579",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bee6bdc252d8d9ac",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "seafood-app",
              "Name": "seafood-app-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "seafood-app",
              "Name": "seafood-app-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2d228d5b410dd84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120545966579:route-table/rtb-0bc526276296914b5",
            "id": "rtb-0bc526276296914b5",
            "owner_id": "120545966579",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0ce8bd69ceb355a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "seafood-app",
              "Name": "seafood-app-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "seafood-app",
              "Name": "seafood-app-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2d228d5b410dd84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065303475ebeb8610",
            "route_table_id": "rtb-038069f107af0660d",
            "subnet_id": "subnet-051a369c0657a6ea9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bd10d0e0191f235",
            "route_table_id": "rtb-038069f107af0660d",
            "subnet_id": "subnet-09a4b55ea46443b2c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a862f7e08a5459b",
            "route_table_id": "rtb-0bc526276296914b5",
            "subnet_id": "subnet-0097c131c41b17cb1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025a916b8f3e5ddb1",
            "route_table_id": "rtb-0bc526276296914b5",
            "subnet_id": "subnet-09c74e967fc183c3b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120545966579:subnet/subnet-051a369c0657a6ea9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051a369c0657a6ea9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120545966579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "seafood-app",
              "Name": "seafood-app-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "seafood-app",
              "Name": "seafood-app-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c2d228d5b410dd84"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120545966579:subnet/subnet-09a4b55ea46443b2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a4b55ea46443b2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120545966579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "seafood-app",
              "Name": "seafood-app-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "seafood-app",
              "Name": "seafood-app-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c2d228d5b410dd84"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120545966579:subnet/subnet-0097c131c41b17cb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0097c131c41b17cb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "120545966579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "seafood-app",
              "Name": "seafood-app-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "seafood-app",
              "Name": "seafood-app-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c2d228d5b410dd84"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120545966579:subnet/subnet-09c74e967fc183c3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c74e967fc183c3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "120545966579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "seafood-app",
              "Name": "seafood-app-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "seafood-app",
              "Name": "seafood-app-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c2d228d5b410dd84"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120545966579:vpc/vpc-0c2d228d5b410dd84",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05b5d3649f242eecb",
            "default_route_table_id": "rtb-0f78d60ecf2b90652",
            "default_security_group_id": "sg-04b60db8d3c68f2d4",
            "dhcp_options_id": "dopt-6b9c0910",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c2d228d5b410dd84",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f78d60ecf2b90652",
            "owner_id": "120545966579",
            "tags": {
              "Environment": "seafood-app",
              "Name": "seafood-app",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "seafood-app",
              "Name": "seafood-app",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}